--- a/src/components/Attribution.module.css
+++ b/src/components/Attribution.module.css
@@ -1,8 +1,14 @@
+@import '~/brand.css';
+
 .attribution {
+  margin-top: calc(2 * var(--baseline));
+}
+
+.attribution a {
   color: inherit;
   text-decoration: none;
 }
 
-.attribution > * {
+.attribution a > * {
   vertical-align: middle;
 }
